--- a/package.json
+++ b/package.json
@@ -1,41 +1,21 @@
 {
-  "name": "blog",
+  "name": "testing",
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "lint": "next lint",
-    "dev": "next dev",
+    "dev": "next dev --turbopack",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "lint": "next lint"
   },
   "dependencies": {
-
-    "@next/third-parties": "^14.0.4",
-    "accordion-js": "^3.3.4",
-    "axios": "^1.6.7",
-    "bootstrap": "^5.3.2",
-    "next": "13.5.6",
-    "react": "^18",
-    "react-accessible-accordion": "^5.0.0",
-    "react-burger-menu": "^3.0.9",
-    "react-countup": "^6.5.0",
-    "react-dom": "18",
-
-    "react-ga4": "^2.1.0",
-
-    "react-multi-carousel": "^2.8.4",
-    "react-player": "^2.14.1",
-    "react-rainfall": "^0.1.533",
-    "react-responsive-carousel": "^3.2.23",
-    "react-scroll-trigger": "^0.6.14",
-
-    "react-slick": "^0.30.2",
-    "react-sticky-el": "^2.1.0",
-    "react-tabs": "^6.0.2",
-    "slick-carousel": "^1.8.1"
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "next": "15.1.3"
   },
   "devDependencies": {
-    "eslint": "^8",
-    "eslint-config-next": "13.5.6"
+    "eslint": "^9",
+    "eslint-config-next": "15.1.3",
+    "@eslint/eslintrc": "^3"
   }
 }
