--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "bootstrap": "^5.3.3",
     "next": "15.1.3",
     "react": "^19.0.0",
+    "react-accessible-accordion": "^5.0.0",
+    "react-burger-menu": "^3.1.0",
     "react-dom": "^19.0.0",
     "react-fast-marquee": "^1.6.5",
     "react-multi-carousel": "^2.8.5",
