--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next/third-parties": "^15.2.2",
     "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
     "next": "15.1.3",
